@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: perftest.8.man,v 0.9.2.3 2006/12/28 10:42:08 brian Exp $
+.\" @(#) $Id: perftest.8.man,v 0.9.2.4 2007/05/03 22:18:27 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/12/28 10:42:08 $ by $Author: brian $
+.\" Last Modified $Date: 2007/05/03 22:18:27 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: perftest.8.man,v $
+.\" Revision 0.9.2.4  2007/05/03 22:18:27  brian
+.\" - updated perftest program and docuemntation
+.\"
 .\" Revision 0.9.2.3  2006/12/28 10:42:08  brian
 .\" - a bit better make check target
 .\"
