@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: perftest.8.man,v 0.9.2.2 2006/04/05 09:43:23 brian Exp $
+.\" @(#) $Id: perftest.8.man,v 0.9.2.3 2007/05/03 22:18:30 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/04/05 09:43:23 $ by $Author: brian $
+.\" Last Modified $Date: 2007/05/03 22:18:30 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: perftest.8.man,v $
+.\" Revision 0.9.2.3  2007/05/03 22:18:30  brian
+.\" - updated perftest program and docuemntation
+.\"
 .\" Revision 0.9.2.2  2006/04/05 09:43:23  brian
 .\" - moved .so line and updated headers
 .\"
