@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: perftest.8.man,v 0.9.2.5 2006/10/05 12:17:03 brian Exp $
+.\" @(#) $Id: perftest.8.man,v 0.9.2.6 2007/05/03 22:18:34 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/10/05 12:17:03 $ by $Author: brian $
+.\" Last Modified $Date: 2007/05/03 22:18:34 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: perftest.8.man,v $
+.\" Revision 0.9.2.6  2007/05/03 22:18:34  brian
+.\" - updated perftest program and docuemntation
+.\"
 .\" Revision 0.9.2.5  2006/10/05 12:17:03  brian
 .\" - updates for release
 .\"
