@@ -1,5 +1,8 @@
 2007-05-03  Brian Bidulock  <bidulock@openss7.org>
 
+	* doc/man/man8/perftest.8.man: updated perftest program
+	* src/test/perftest.c: updated perftest program
+
 	* doc/man/man9/M_MI.9.man: added manual page
 
 	* doc/papers/legacypipe.fig: added performance results paper
